Fixed large file

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,3 +27,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.MotionBlur=False
+
